<resources>

    <string name="app_name">MOVIENAMA</string>
    <string name="title_activity_details">Movie Details</string>

    <!-- Menu Options -->

    <string name="mostPop">Most Popular</string>
    <string name="filter">Filter</string>
    <string name="upcoming">Upcoming Movies</string>
    <string name="latest">New Release Movies</string>
    <string name="now">Now Playing</string>
    <string name="top">Top Rated</string>
    <string name="watchlist">My Watchlist</string>
    <string name="favorites">My Favorites</string>
    <string name="refresh">Refresh</string>
    <string name="addwatchlist">Add Watchlist</string>
    <string name="addfavorites">Add Favorites</string>

    <!-- List Item -->

    <string name="title">Movie Title</string>
    <string name="release">Released on: \u0020</string>
    <string name="popularity">Popularity: \u0020</string>

    <!-- Details Screen -->

    <string name="budget">Budget: \u0020</string>
    <string name="revenue">Revenue: \u0020</string>
    <string name="status">Status: \u0020</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="trailers">Trailers</string>
    <string name="posters">Posters</string>

</resources>