<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieImageView2"
                android:layout_width="125dp"
                android:layout_height="156.25dp"
                android:scaleType="fitXY"
                android:src="@drawable/loading_image" />

            <TextView
                android:id="@+id/titleTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_toEndOf="@+id/movieImageView2"
                android:layout_toRightOf="@+id/movieImageView2"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar2"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/titleTextView2"
                android:layout_marginTop="@dimen/text_half_margin" />

            <TextView
                android:id="@+id/smallDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/ratingBar2"
                android:layout_marginTop="@dimen/text_half_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/releaseDateTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/smallDescriptionTextView"
                android:layout_marginTop="@dimen/text_half_margin"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/releaseDateTextView2"
                android:layout_marginTop="@dimen/text_half_margin"
                android:text="@string/budget"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="@dimen/text_half_margin"
                android:text="@string/revenue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/titleTextView2"
                android:layout_alignStart="@+id/titleTextView2"
                android:layout_below="@+id/textView4"
                android:layout_marginTop="@dimen/text_half_margin"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/budgetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/revenueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView4"
                android:layout_toEndOf="@+id/textView4"
                android:layout_toRightOf="@+id/textView4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:layout_toRightOf="@+id/textView5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/votesImageView2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_action_star" />

            <TextView
                android:id="@+id/voteCountTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/favoritesImageView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/descriptionTextView"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:padding="@dimen/text_margin"
                android:src="@drawable/favorite_disable_normal" />

            <ImageView
                android:id="@+id/watchlistImageView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_alignTop="@+id/favoritesImageView"
                android:layout_toEndOf="@+id/favoritesImageView"
                android:layout_toRightOf="@+id/favoritesImageView"
                android:padding="@dimen/text_margin"
                android:src="@drawable/watchlist_disable_normal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/favoritesImageView"
                android:layout_alignLeft="@+id/favoritesImageView"
                android:layout_alignRight="@+id/favoritesImageView"
                android:layout_alignStart="@+id/favoritesImageView"
                android:layout_below="@+id/favoritesImageView"
                android:gravity="center"
                android:text="@string/my_favorites"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/watchlistImageView"
                android:layout_alignLeft="@+id/watchlistImageView"
                android:layout_alignRight="@+id/watchlistImageView"
                android:layout_alignStart="@+id/watchlistImageView"
                android:layout_below="@+id/watchlistImageView"
                android:layout_marginBottom="@dimen/text_margin"
                android:gravity="center"
                android:text="@string/my_watchlist"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/white" />

        </RelativeLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/posters_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/poster_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/posters"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/posters_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@android:color/white" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/trailer_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trailer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/trailers"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/trailer_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@android:color/white" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/casts_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/casts_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/cast"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/casts_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@android:color/white" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/crew_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/crew_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/crew"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textIsSelectable="false"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/crew_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/text_margin"
            android:background="@android:color/transparent" />

    </LinearLayout>

</ScrollView>